--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stxt",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "engine": "node >= 10.0.0",
   "description": "Parer of stxt format.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
@@ -9,10 +9,6 @@
     {
       "name": "Kostiantyn Wandalen",
       "email": "wanalen@01.school"
-    },
-    {
-      "name": "Volodymyr M.",
-      "email": "volodymyr.migdal@gmail.com"
     }
   ],
   "main": "proto/node_modules/stxt",
@@ -21,7 +17,7 @@
     "out",
     "proto/node_modules",
     "proto/node_modules/Tools",
-    "proto/node_modules/stxt"
+    "proto/node_modules/stxt",
     "proto/node_modules/wstxt"
   ],
   "scripts": {
@@ -36,11 +32,11 @@
     "url": "https://github.com/Wandalen/wStxt/issues"
   },
   "dependencies": {
-    "wTools": "",
-    "wblueprint": ""
+    "wTools": "delta",
+    "wblueprint": "delta"
   },
   "devDependencies": {
-    "wTesting": "",
+    "wTesting": "delta"
   },
   "keywords": [
     "wTools",
