--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.3.17",
   "engine": "node >= 10.0.0",
   "description": "Parer of stxt format.",
-  "author": "Kostiantyn Wandalen <wanalen@01.school>",
+  "author": "Kostiantyn Wandalen <wandalen@obox.systems>",
   "license": "MIT",
   "contributors": [
     {
       "name": "Kostiantyn Wandalen",
-      "email": "wanalen@01.school"
+      "email": "wandalen@obox.systems"
     }
   ],
   "main": "proto/node_modules/stxt",
