--- a/will.yml
+++ b/will.yml
@@ -5,13 +5,13 @@ about:
   enabled: 1
   license: MIT
   npm.name: stxt
-  author: Kostiantyn Wandalen <wanalen@01.school>
+  author: Kostiantyn Wandalen <wandalen@obox.systems>
   keywords:
     - wTools
     - stxt
     - parser
   contributors:
-    - Kostiantyn Wandalen <wanalen@01.school>
+    - Kostiantyn Wandalen <wandalen@obox.systems>
   interpreters:
     - njs >= 10.0.0
     - chrome >= 60.0.0
