--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stxt",
-  "version": "0.3.18",
+  "version": "0.3.19",
   "engine": "node >= 10.0.0",
   "description": "Parer of stxt format.",
   "author": "Kostiantyn Wandalen <wandalen@obox.systems>",
@@ -32,19 +32,19 @@
     "url": "https://github.com/Wandalen/wStxt/issues"
   },
   "dependencies": {
-    "wTools": "alpha",
-    "wCopyable": "alpha",
-    "wblueprint": "alpha"
+    "wTools": "delta",
+    "wCopyable": "delta",
+    "wblueprint": "delta"
   },
   "devDependencies": {
-    "wTesting": "alpha",
-    "wtemplatetreeenvironment": "alpha",
-    "wProto": "alpha",
-    "winstancing": "alpha",
-    "wEventHandler": "alpha",
-    "wdombasic": "alpha",
-    "wConsequence": "alpha",
-    "wcloner": "alpha"
+    "wTesting": "delta",
+    "wtemplatetreeenvironment": "delta",
+    "wProto": "delta",
+    "winstancing": "delta",
+    "wEventHandler": "delta",
+    "wdombasic": "delta",
+    "wConsequence": "delta",
+    "wcloner": "delta"
   },
   "keywords": [
     "wTools",
